# modal-eval

./: .gitignore  CLAUDE.md  README.md  analyze_loops.py  pyproject.toml
jobs/: analyze_loops.job  analyze_loops_aime.job  analyze_loops_test.job
modal_eval/: __init__.py  __main__.py  checkpoint.py  cli.py  modal_lifecycle.py  models.py  overrides.py  proxy.py  push_to_hub.py  registry.py  run.py  runner.py  serve.py
modal_eval/config/: __init__.py  aime2025.yaml  aime2025_clean.yaml  gsm8k.yaml  ifeval.yaml  livecodebench.yaml  math500.yaml
modal_eval/envs/: __init__.py  aime2025_clean.py
modal_eval/templates/: base.jinja  code.jinja  code1.jinja  if.jinja  math.jinja  math1.jinja  think.jinja
scripts/: add_loop_metadata.py  analyze_loops.py
